@@ -4,6 +4,8 @@
 
 	all : fixed rest args typing for overloaded functions (#10143)
 	all : fixed using `var` fields as static extensions (#10144)
+	all : fixed completion for a type in `expr is Type` (#10167)
+	all : fixed subtypes in `expr is Module.SubType` expressions (#10174)
 	hl : fixed debugging of `catch` blocks (#10109)
 	jvm : fixed manifest generation for cases with a lot of jar libraries (#10157)
 
